[gd_scene load_steps=7 format=3 uid="uid://dtaqr72ueoeng"]

[ext_resource type="StyleBox" uid="uid://jqa8dgagawo1" path="res://PanelStyles/SkillBarBoxStyle.tres" id="1_0kdtv"]
[ext_resource type="Texture2D" uid="uid://bvnmf54c4ye2n" path="res://Art/CardComponents/card-background-texture-V4b-ForInfoPane.jpg" id="2_axiiv"]
[ext_resource type="Script" uid="uid://cjv7n32vxaee8" path="res://GameScenes/cardInfoPanel.gd" id="2_o0dss"]
[ext_resource type="LabelSettings" uid="uid://5ls01gsi27ws" path="res://Fonts/LabelSet-Header-Brown.tres" id="3_o0dss"]
[ext_resource type="Texture2D" uid="uid://b7g66n14xrpak" path="res://Art/CardArt/card-art-base-card-idk.png" id="4_ykqoc"]
[ext_resource type="LabelSettings" uid="uid://qjlnlywf0ted" path="res://Fonts/LabelSetSmallBrownCardText.tres" id="5_f5wib"]

[node name="CardInfoPanel" type="PanelContainer"]
custom_minimum_size = Vector2(400, 600)
theme_override_styles/panel = ExtResource("1_0kdtv")
script = ExtResource("2_o0dss")

[node name="CardBackgroundTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_axiiv")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="NameLabel" type="Label" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Card Name"
label_settings = ExtResource("3_o0dss")
horizontal_alignment = 1
vertical_alignment = 2

[node name="CardArt" type="TextureRect" parent="Margin/VBox"]
layout_mode = 2
texture = ExtResource("4_ykqoc")
expand_mode = 5
stretch_mode = 4

[node name="VBox2" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SubTypeLine" type="Label" parent="Margin/VBox/VBox2"]
layout_mode = 2
text = "Sub-type line goes here."
label_settings = ExtResource("5_f5wib")
horizontal_alignment = 1

[node name="EffectText" type="Label" parent="Margin/VBox/VBox2"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Effect text goes here."
label_settings = ExtResource("5_f5wib")
horizontal_alignment = 1
autowrap_mode = 2

[node name="FlavorTextLabel" type="Label" parent="Margin/VBox/VBox2"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Flavor text"
label_settings = ExtResource("5_f5wib")
horizontal_alignment = 1
autowrap_mode = 2

[node name="AttackDefenseLabel" type="Label" parent="Margin"]
layout_mode = 2
size_flags_vertical = 8
text = "Attack / Defense"
label_settings = ExtResource("5_f5wib")
horizontal_alignment = 1
